# subtitle-forge

./: .gitignore  GUIDE.md  README.md  pyproject.toml
config/: default.yaml
src/subtitle_forge/: __init__.py  __main__.py  exceptions.py
src/subtitle_forge/cli/: app.py
src/subtitle_forge/cli/commands/: batch.py  config.py  serve.py  transcribe.py  translate.py
src/subtitle_forge/core/: audio.py  model_manager.py  pipeline.py  prompt_library.py  queue.py  subtitle.py  timestamp_processor.py  transcriber.py  translator.py
src/subtitle_forge/models/: config.py  prompt.py  subtitle.py  task.py
src/subtitle_forge/server/: __init__.py  app.py  auth.py  jobs.py  models.py  processing.py
src/subtitle_forge/utils/: gpu.py  logger.py  progress.py  setup_wizard.py
